Implement initial working version of ms entra auth